apps/goapprealtest/base/goapprealtest-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: goapprealtest-vs
  namespace: default
  labels:
    app: goapprealtest
    version: 0.0.1
    backstage.io/kubernetes-id: goapprealtest
spec:
  gateways:
  - istio-system/istio-ingressgateway
  hosts:
  - goapprealtest.demo.fisdev.link
  http:
  - name: primary
    route:
    - destination:
        host: goapprealtest-svc
      weight: 100
